--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,4 +18,12 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
+  <link rel="icon" href="/docs/4.1/assets/img/favicons/favicon.ico" />
+  <link
+    rel="canonical"
+    href="https://getbootstrap.com/docs/4.1/examples/navbar-bottom/"
+  />
+
+  <!-- Bootstrap core CSS -->
+  <link href="../../dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
