--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -47,9 +47,9 @@
                 class="d-flex justify-content-between align-items-center mb-3"
               >
                 <span class="text-primary">Accounts</span>
-                <span class="badge bg-primary rounded-pill"
-                  ><% (accounts.length) %>2</span
-                >
+                <span class="badge bg-primary rounded-pill">
+                  <% accounts.length %>2
+                </span>
               </h2>
               <% if (accounts.length) { %>
               <ul class="list-group mb-3">
