--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -81,19 +81,23 @@
             <table class="table table-striped">
               <thead>
                 <tr>
+                  <th scope="col">Type</th>
                   <th scope="col">Account</th>
                   <th scope="col">Date</th>
-                  <th scope="col">Currency</th>
                   <th scope="col">Total</th>
+                  <th scope="col">Currency</th>
+                  <th scope="col">Rate</th>
                 </tr>
               </thead>
               <tbody>
-                <% payments.forEach(({ account, total, currency, date}) => { %>
+                <% payments.forEach(({ type, account, total, currency, date, currencyRate}) => { %>
                 <tr>
-                  <th scope="row"><%- account %></th>
-                  <td><%- date %></td>
+                  <td scope="row"><%- type %></td>
+                  <td scope="row"><%- account %></td>
+                  <td><%- date.toLocaleString('cs-CZ', { day: '2-digit', month: '2-digit', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit' }) %></td>
+                  <td><%- total %> CZK</td>
                   <td><%- currency %></td>
-                  <td><%- total %></td>
+                  <td><%- currencyRate %></td>
                 </tr>
                 <% }) %>
               </tbody>
