--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -95,7 +95,7 @@
                   <td scope="row"><%- type %></td>
                   <td scope="row"><%- account %></td>
                   <td><%- date.toLocaleString('cs-CZ', { day: '2-digit', month: '2-digit', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit' }) %></td>
-                  <td><%- total %> CZK</td>
+                  <td><%- total %></td>
                   <td><%- currency %></td>
                   <td><%- currencyRate %></td>
                 </tr>
