--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -61,7 +61,7 @@
                     <h6 class="my-0"><%- number %></h6>
                   </div>
                   <div>
-                    <span class="text-body-secondary"><%- balance %> <%- currency %></span>
+                    <span class="text-body-secondary"><%- parseFloat(balance).toFixed(2) %> <%- currency %></span>
                   </div>
                   
                 </li>
@@ -95,9 +95,9 @@
                   <td scope="row"><%- type %></td>
                   <td scope="row"><%- account %></td>
                   <td><%- date.toLocaleString('cs-CZ', { day: '2-digit', month: '2-digit', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit' }) %></td>
-                  <td><%- total %></td>
+                  <td><%- parseFloat(total).toFixed(2) %></td>
                   <td><%- currency %></td>
-                  <td><%- currencyRate %></td>
+                  <td><%- parseFloat(currencyRate).toFixed(2) %></td>
                 </tr>
                 <% }) %>
               </tbody>
