--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -78,30 +78,33 @@
               <span class="text-primary">Payments</span>
             </h2>
             <!-- table with payments (account, date, currency, total) -->
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th scope="col">Type</th>
-                  <th scope="col">Account</th>
-                  <th scope="col">Date</th>
-                  <th scope="col">Total</th>
-                  <th scope="col">Currency</th>
-                  <th scope="col">Rate</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% payments.forEach(({ type, account, total, currency, date, currencyRate}) => { %>
-                <tr>
-                  <td scope="row"><%- type %></td>
-                  <td scope="row"><%- account %></td>
-                  <td><%- date.toLocaleString('cs-CZ', { day: '2-digit', month: '2-digit', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit' }) %></td>
-                  <td><%- parseFloat(total).toFixed(2) %></td>
-                  <td><%- currency %></td>
-                  <td><%- parseFloat(currencyRate).toFixed(2) %></td>
-                </tr>
-                <% }) %>
-              </tbody>
-            </table>
+            <div class="table-responsive">
+
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">Type</th>
+                    <th scope="col">Account</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Total</th>
+                    <th scope="col">Currency</th>
+                    <th scope="col">Rate</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% payments.forEach(({ type, account, total, currency, date, currencyRate}) => { %>
+                  <tr>
+                    <td scope="row"><%- type %></td>
+                    <td scope="row"><%- account %></td>
+                    <td><%- date.toLocaleString('cs-CZ', { day: '2-digit', month: '2-digit', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit' }) %></td>
+                    <td><%- parseFloat(total).toFixed(2) %></td>
+                    <td><%- currency %></td>
+                    <td><%- parseFloat(currencyRate).toFixed(2) %></td>
+                  </tr>
+                  <% }) %>
+                </tbody>
+              </table>
+              </div>
           </div>
         </div>
         <footer class="pt-3 mt-4 text-body-secondary border-top">© Starkov 2023</footer>
